bk_ida/gccida/g1/store_constructor
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4864:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4867:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4868:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4871:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4873:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4882:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4883:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4891:5: error: expected ';' after expression
tree v45; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4891:6: error: use of undeclared identifier 'v45'
tree v45; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4892:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v46; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4893:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4894:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4895:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4899:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v53; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4900:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4906:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v60; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4907:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v61; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4910:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v64; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/expr.c:4911:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v65; // r12 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/store_constructor/src/obj/expr.o] Error 1
